# CookieKat

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PostInstall.cmake  README.md  SETUP_X64_BUILD.bat
BuildSystem/: Engine_Module.cmake
Code/Experimental/DOD/: CMakeLists.txt  DOD.cpp
Code/Experimental/RenderAPI_Sandbox/: CMakeLists.txt  CommonShapes.h  FrameGraph_Tests.h  GLFWUtils.h  ParticleTest.h  RenderSandboxEnv.cpp  RenderSandboxEnv.h  TriangleTest.h  main.cpp
Code/Experimental/TypeSystem/: CMakeLists.txt  Main.cpp
Code/Experimental/Vulkan/: CMakeLists.txt  Main.cpp  shader.vert
Code/Runtime/Application/: Application_GLFW.cpp  Application_Win32.cpp  CMakeLists.txt  WindowsPlatform.h
Code/Runtime/Application/Shared/: GameEngine.cpp  GameEngine.h
Code/Runtime/Core/: API.h  CMakeLists.txt
Code/Runtime/Core/Containers/: CMakeLists.txt
Code/Runtime/Core/Containers/include/CookieKat/Core/Containers/: Containers.h  String.h
Code/Runtime/Core/Containers/tests/: Containers_Tests.cpp
Code/Runtime/Core/Debugging/: CMakeLists.txt
Code/Runtime/Core/Debugging/Public/CookieKat/Core/Debugging/: Debugging.h
Code/Runtime/Core/FileSystem/: CMakeLists.txt
Code/Runtime/Core/FileSystem/include/CookieKat/Core/FileSystem/: FileSystem.h
Code/Runtime/Core/FileSystem/src/: FileSystem.cpp
Code/Runtime/Core/FileSystem/tests/: FileSystem_Tests.cpp
Code/Runtime/Core/Logging/: CMakeLists.txt
Code/Runtime/Core/Logging/include/CookieKat/Core/Logging/: LogUtils.h  LoggingSystem.h
Code/Runtime/Core/Logging/src/: LoggingSystem.cpp
Code/Runtime/Core/Logging/tests/: Logging_Tests.cpp
Code/Runtime/Core/Math/: CMakeLists.txt
Code/Runtime/Core/Math/include/CookieKat/Core/Math/: Math.h
Code/Runtime/Core/Memory/: CMakeLists.txt
Code/Runtime/Core/Memory/include/CookieKat/Core/Memory/: LinearAllocator.h  Memory.h  PoolAllocator.h  StackAllocator.h
Code/Runtime/Core/Memory/src/: Allocator.cpp  Memory.cpp  PoolAllocator.cpp
Code/Runtime/Core/Memory/tests/: Allocators_Tests.cpp
Code/Runtime/Core/Platform/: CMakeLists.txt
Code/Runtime/Core/Platform/include/CookieKat/Core/Platform/: Asserts.h  Concepts.h  PlatformTime.h  Platform_Win32.h  PrimitiveTypes.h
Code/Runtime/Core/Platform/src/: PlatformTime.cpp
Code/Runtime/Core/Profilling/: CMakeLists.txt
Code/Runtime/Core/Random/: CMakeLists.txt
Code/Runtime/Core/Random/src/: Random.cpp
Code/Runtime/Core/Serialization/: CMakeLists.txt
Code/Runtime/Core/Serialization/src/: Archive.cpp  BinarySerialization.cpp  JSONSerialization.cpp
Code/Runtime/Core/Serialization/tests/: Serialization_Tests.cpp
Code/Runtime/Core/Threading/: CMakeLists.txt
Code/Runtime/Core/Threading/src/: Threading.cpp
Code/Runtime/Core/Timer/: CMakeLists.txt
Code/Runtime/Core/Timer/src/: EngineTime.cpp
Code/Runtime/Core/Timer/tests/: Time_Tests.cpp
Code/Runtime/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Code/Runtime/Engine/Entities/: CMakeLists.txt
Code/Runtime/Engine/Entities/src/: EntitySystem.cpp
Code/Runtime/Engine/Render/: CMakeLists.txt
Code/Runtime/Engine/Render/src/: RenderPassPipeline.cpp  RenderingSystem.cpp
Code/Runtime/Engine/Render/src/Common/: GlobalRenderAssets.cpp
Code/Runtime/Engine/Render/src/LightProbeSystem/: LightProbeBakingSystem.cpp
Code/Runtime/Engine/Render/src/ParticleSystem/: ParticleSystem.cpp
Code/Runtime/Engine/Render/src/PipelineManager/: PipelineManager.cpp
Code/Runtime/Engine/Render/src/RTextureManager/: RTextureManager.cpp
Code/Runtime/Engine/Render/src/RenderPasses/: BloomModule.cpp  DepthPrePass.cpp  FXAAPass.cpp  GBufferPass.cpp  IntensityCheckPass.cpp  LightingPass.cpp  PresentPass.cpp  SSAOPass.cpp  SkyBoxPass.cpp  TestComputePass.cpp  TonemappingPass.cpp
Code/Runtime/Engine/Render/src/RenderScene/: RenderSceneManager.cpp
Code/Runtime/Engine/Resources/: CMakeLists.txt
Code/Runtime/Engine/Resources/src/Loaders/: MaterialLoader.cpp  MeshLoader.cpp  PipelineLoader.cpp  TextureLoader.cpp
Code/Runtime/Engine/Resources/tests/: Resources_tests.cpp
Code/Runtime/Systems/: CMakeLists.txt
Code/Runtime/Systems/ECS/: CMakeLists.txt
Code/Runtime/Systems/ECS/src/: Archetype.cpp  ComponentIter.cpp  EntityDatabase.cpp
Code/Runtime/Systems/ECS/src/Jobs/: ECSJob.cpp
Code/Runtime/Systems/ECS/tests/: ECS_tests.cpp
Code/Runtime/Systems/EngineSystem/: CMakeLists.txt
Code/Runtime/Systems/EngineSystem/src/: IEngineSystem.cpp
Code/Runtime/Systems/FrameGraph/: CMakeLists.txt
Code/Runtime/Systems/FrameGraph/src/: FrameGraph.cpp  FrameGraphBuilder.cpp  FrameGraphRegistry.cpp  FrameGraphResources.cpp
Code/Runtime/Systems/FrameGraph/tests/: FrameGraph_Tests.cpp
Code/Runtime/Systems/Input/: CMakeLists.txt
Code/Runtime/Systems/Input/src/: InputSystem.cpp  KeyboardInputConsoleVisualizer.cpp
Code/Runtime/Systems/Input/src/Devices/: Keyboard.cpp  KeyboardDevice.cpp  Mouse.cpp
Code/Runtime/Systems/RenderAPI/: CMakeLists.txt
Code/Runtime/Systems/RenderAPI/src/: RenderAPI.cpp
Code/Runtime/Systems/RenderAPI/src/Vulkan/: CommandList_Impl_Vk.h  Instance_Vk.cpp  RenderDevice_Impl_Vk.h  RenderResourcesDB.cpp  RenderResourcesDatabase.cpp
Code/Runtime/Systems/RenderAPI/tests/: RenderAPI_Tests.cpp
Code/Runtime/Systems/RenderUtils/: CMakeLists.txt
Code/Runtime/Systems/RenderUtils/src/: ShaderReflection.cpp  SphericalHarmonicsUtils.cpp  TextureUtils.cpp
Code/Runtime/Systems/Resources/: CMakeLists.txt
Code/Runtime/Systems/Resources/src/: ResourceSystem.cpp  ResourceTypeID.cpp
Code/Runtime/Systems/TaskSystem/: CMakeLists.txt
Code/Runtime/Systems/TaskSystem/src/: TaskSystem.cpp
Code/Tools/ResourceCompiler/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ResourceCompiler.cpp  ResourceCompiler.h  ResourceCompiler.vcxproj  ResourceCompiler.vcxproj.filters  cmake_install.cmake
Code/Tools/ResourceCompiler/Compilers/: MaterialCompiler.cpp  MaterialCompiler.h
Code/Tools/ResourceCompilerCLI/: CMakeLists.txt  EntryPointCLI.cpp  INSTALL.vcxproj  INSTALL.vcxproj.filters  ResourceCompilerCLI.vcxproj  ResourceCompilerCLI.vcxproj.filters  cmake_install.cmake
(+215 files in other folders)
